# ministry-of-petty-matters-forum

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  rust.yml
assets/: app.js  brutalism.css  style.css
infrastructure/: .terraform.lock.hcl  README.md  container_registry.tf  initial_deploy.sh  main.tf  providers.tf  variables.tf
infrastructure/modules/app/: db.tf  main.tf  providers.tf  variables.tf
migration/: Dockerfile
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250530_124142_add_comments.rs
src/: config.rs  error.rs  feature_flags.rs  main.rs  queue.rs  templates.rs  time.rs  view.rs  write_queue.rs
src/authn/: extractors.rs  mod.rs  oauth.rs  session.rs  views.rs
src/authn/oauth/: config.rs  errors.rs  mod.rs  token.rs
src/authn/oauth/providers/: google.rs
src/persistence/: in_memory_repository.rs  mod.rs  rdbms.rs  repository.rs
src/petty_matters/: comment.rs  comment_repository.rs  mod.rs  repository.rs  service.rs  topic.rs  topic_repository.rs  views.rs
src/petty_matters/topic/: entity.rs  mod.rs  service.rs
src/queue/: base.rs  in_memory_queue.rs  mod.rs  stub_queue.rs  worker.rs
src/views/: mod.rs  pagination.rs  templates.rs
templates/: base.html
templates/authn/: login.html
templates/errors/: 404.html  5xx.html
templates/petty_matters/: add.html  list.html  view.html
