[package]
name = "ministry-of-petty-matters-forum"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
nursery = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

must_use_candidate = "allow"  # Disabled due to false positives
diverging_sub_expression = "allow"
expect-used = "deny"
items_after_statements = "allow"
missing_errors_doc = "allow"
redundant-clone = "deny"
unwrap-used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unreachable = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
sea-query = "0.32.5"
sqlx = { version = "0.8.5", features = ["runtime-tokio"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
async-trait = "0.1.88"
askama = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.4" , features = ["fs"]}
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
